fix z-index for images and cards

--- a/src/uiAngular/src/app/userModule/user-main-page/user-main-page.component.sass
+++ b/src/uiAngular/src/app/userModule/user-main-page/user-main-page.component.sass
@@ -13,11 +13,13 @@
   position: absolute
   right: 0px
   bottom: 0px
+  z-index: 1
 
 .second-bubble
   position: absolute
   width: 500px
   height: auto
+  z-index: 1
 
 .content
   display: flex
@@ -35,6 +37,7 @@
   margin-bottom: 5vh
 
 .card
+  z-index: 5
   border: 1px solid transparent
   background-color: $user-cards-color
   width: 32%
